# diffcessible

./: .ocamlformat  CONTRIBUTING.md  LICENSE  README.md  diff.example  diffcessible.opam  difftool-dune.sh  dune-project  example.diff  tmp_file.txt
.github/workflows/: ci-pull-request.yml  main.yml  ocaml-ci-setup.yml
lib/: Block.ml  Block.mli  DiffAlgorithms.ml  HelpView.ml  HelpView.mli  HunkView.ml  HunkView.mli  InteractiveViewer.ml  InteractiveViewer.mli  OperationView.ml  OperationView.mli  PatchNavigation.ml  PatchNavigation.mli  Types.ml  WordDiff.ml  WordDiff.mli  dune  interactive_viewer.ml  interactive_viewer.mli  test_zipper.ml  zipper.ml  zipper.mli
test/: dune  test_zipper.ml
test/cram/: InteractiveViewerDummy.ml  dune  example.diff  interactive_viewer_dummy.ml  more-examples.diff  test.t  word-diff-examples.diff
test/cram/word-diff.t/: run.t
test/unit/: TestBlock.ml  TestWordDiff.ml  dune
