(lang dune 3.11)

(name diffcessible)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Paul-Elliot <peada@free.fr>" "Jules Aguillon <jules@j3s.fr>")

(maintainers "Paul-Elliot <peada@free.fr>" "Jules Aguillon <jules@j3s.fr>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name diffcessible)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
